# text-tools

./: .gitignore  .travis.yml  AUTHORS  CHANGES.md  Doxyfile  Makefile.am  README  README.md  autogen.sh  configure.ac
debian/: changelog  control  copyright  rules
doc/: Makefile.am  texttohtml.1  texttopdf.1  texttopng.1  texttops.1  texttops.1.in
scripts/: coverity  dist
scripts/travis/linux/gcc/: configure
scripts/travis/osx/clang/: configure  install
src/: CairoOutput.cc  CairoOutput.hh  Characters.hh  File.cc  File.hh  HtmlOutput.cc  HtmlOutput.hh  Makefile.am  Optional.hh  Textfile.cc  Textfile.hh  TextfileProcessor.cc  Utils.hh  narrowToWide.cc  stringToDouble.cc  stringToInt.cc  t-file-pipe.cc  t-file.cc  t-n2w.cc  t-s2d.cc  t-s2i.cc  t-textfile.cc  t-texttohtml  t-texttohtml-args  t-w2u.cc  texttohtml.cc  texttopng.cc  texttops.cc  wideToUtf8.cc
src/test-inputs/: bold-underline.txt  bold.txt  quoting.txt  tabs.txt  underline.txt
src/test-outputs/: bold-italic.html  bold-underline.html  empty.html  quoting.html  simple-titled.html  simple.html  tabs-four.html  tabs.html  underline-italic.html  underline.html
